# RetinaFacesCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: full.cpp
examples/utils/: .gitignore  Makefile  README.md  customUtils.h  libutils.lib  libutils.sln  libutils.vcxproj  libutils.vcxproj.filters
examples/utils/docs/: Doxyfile
examples/utils/docs/html/: annotated.html  annotated_dup.js  classGParser-members.html  classGParser.html  classGParser.js  classes.html  customChecks_8h.html  customChecks_8h.js  customChecks_8h__dep__incl.map  customChecks_8h__dep__incl.md5  customChecks_8h__incl.map  customChecks_8h__incl.md5  customChecks_8h_source.html  customEER_8h_source.html  customFileOps_8h.html  customFileOps_8h.js  customFileOps_8h__incl.map  customFileOps_8h__incl.md5  customFileOps_8h_source.html  customLog_8h.html  customLog_8h.js  customLog_8h__dep__incl.map  customLog_8h__dep__incl.md5  customLog_8h__incl.map  customLog_8h__incl.md5  customParser_8h.html  (+42 more)
examples/utils/example_parse/: example_parse.vcxproj  example_parse.vcxproj.filters
examples/utils/examples/: Makefile  listingFilesExample.cpp  parserExample.cpp
examples/utils/include/: customChecks.h  customEER.h  customFileOps.h  customLog.h  customParser.h  customStringOps.h  customTimeOps.h
examples/utils/list_dir/: list_dir.filters  list_dir.vcxproj
examples/utils/src/: customChecks.cpp  customEER.cpp  customFileOps.cpp  customLog.cpp  customParser.cpp  customStringOps.cpp
include/: Config.h  Grid.h  ImageProcessing.h  RetinaModel.h
src/: ImageProcessing.cpp  RetinaModel.cpp
(+65 files in other folders)
